<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">JBT</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="con_des">item image</string>
    <string name="main_bg_img_des">main page background image</string>
    <string name="dialog_title">שורת</string>
    <string name="dialog_sure">זה</string>
    <string name="dialog_cancel">לבטל</string>
    <string name="net_unusable">הרשת אינה זמינה, אנא בדוק את הרשת שלך!</string>
    <string name="request_failed">בקשה נכשלה!</string>
    <string name="ope_time_out">הפעולה הוקצבה!</string>
    <string name="expand_icon">expand_icon</string>
    <string name="expand_icon_hidden">expand_icon_hidden</string>
    <!-- Login page -->
    <string name="title_activity_login">LoginActivity</string>
    <string name="login_title">כניסה לאזור האישי</string>
    <string name="login_id_hint">מספר תעודת זהות</string>
    <string name="login_name_hint">שם פרטי ושם משפחה</string>
    <string name="login_masual_hint">מספר מסלול/מחזור</string>
    <string name="login_pwd_hint">סיסמה</string>
    <string name="login_btn_text">כניסה</string>
    <string name="login_default_pwd">הסיסמה הראשונית היא 000000!</string>
    <string name="login_failed">סיסמא משתמש אינה נכונה!</string>
    <string name="login_unexist_user">משתמש לא קיים!</string>
    <string name="login_user_offline">המשתמש מחובר!</string>
    <string name="login_user_unusable">המשתמש לא יכול להשתמש!</string>
    <string name="mandatory_text">כל השדות הם שדות חובה</string>
    <string name="forgot_pwd">שכחת סיסמה?</string>
    <!-- Forgot password -->
    <string name="forgot_pwd_title">שכחת סיסמה</string>
    <string name="no_email_text">לא הוסיף תיבת דואר!</string>
    <string name="send_email_failed">אי הגשת המידע!</string>
    <string name="send_email_succeed">היכנס דואר כדי לאחזר את הסיסמה שלך!</string>
    <!-- Main menu page -->
    <string name="logout_message">בין אם כדי לצאת</string>
    <string name="schedule">תוכנית לימודים</string>
    <string name="grades">ציונים שלי</string>
    <string name="techtalk">Techtalk</string>
    <string name="job">לוח דרושים</string>
    <string name="recommend_friend">חבר מביא חבר</string>
    <string name="contact_us">צור קשר</string>
    <string name="change_password">החלפת סיסמא</string>
    <string name="exit">יציאה</string>
    <!-- change password -->
    <string name="change_pwd_title">החלף סיסמא</string>
    <string name="old_pwd_hint">סיסמא ישנה</string>
    <string name="new_pwd_hint">סיסמא חדשה</string>
    <string name="confirm_pwd_hint">הקלד שנית סיסמא חדשה</string>
    <string name="change_pwd_btn">שלח</string>
    <string name="pwd_length_noti">יש להקליד בין 8-12 תווים, ניתן להשתמש באותיות ומספרים!</string>
    <string name="different_new_pwd">הסיסמה החדשה ולאשר את הסיסמה היא עולה בקנה אחד!</string>
    <string name="change_success_text">סיסמתך שונתה בהצלחה!</string>
    <string name="change_failed_text">שינוי סיסמא נכשלה!</string>
    <!-- contact us -->
    <string name="contac_email_hint">כתובת מייל</string>
    <string name="contact_phone_hint">מספר טלפון</string>
    <string name="contact_description_hint">פירוט הפניה</string>
    <string name="contact_inquiry_subject_hint">נושא הפניה</string>
    <string name="contact_remote_check_fail">מידע משתמש אינו נכון!</string>
    <string name="contact_add_inquiry_success">שלח משוב הצלחה!</string>
    <string name="contact_add_inquiry_failed">שלח משוב נכשל!</string>
    <!-- course sylibus -->
    <string name="cs_no_training_schedule">אין לך כל לוח זמנים בהתעמלות!</string>
    <string name="cs_title">תוכנית לימודים</string>
    <string name="cs_class_num">מספר מפגש:</string>
    <string name="cs_teacher_name">שם המרצה:</string>
    <string name="cs_lesson_topic">מספר כיתה:</string>
    <string name="cs_classroom_num">נושא השיעור:</string>
    <!-- recommend friend -->
    <string name="recommend_friend_title">חבר מביא חבר</string>
    <string name="recommend_friend_name_hint">שם החבר</string>
    <string name="recommend_friend_phone_hint">טלפון</string>
    <string name="recommend_friend_email_hint">כתובת מייל</string>
    <string name="recommend_friend_interest_hint">תחום התעניינות</string>
    <string name="recommend_contacts_type">לבחירת חבר מתוך רשימת אנשי הקשר</string>
    <string name="recommend_local_contact">אנשי קשר מהמכשיר</string>
    <string name="recommend_google_contact">Google</string>
    <string name="recommend_outlook_contact">Outlook</string>
    <string name="emial">תיבת דואר</string>
    <string name="phone">מספרי טלפון</string>
    <string name="recommend_failed">המלץ לחבר נכשל!</string>
    <string name="recommend_success">דוא"ל להצלחה חבר!</string>
    <!-- my grades -->
    <string name="my_grades_title">הציונים שלי</string>
    <string name="grades_title">ציון</string>
    <string name="subject_title">נושא</string>
    <string name="average_title">ממוצע ציונים</string>
    <string name="average_init_value">0</string>
    <!-- jobs -->
    <string name="jobs_title">לוח דר</string>
    <!-- jobs filter -->
    <string name="jobs_filter_title">סנן משרות</string>
    <string name="area_title">בחר תחום</string>
    <string name="domain_title">בחר אזור</string>
    <string name="check_all">כל התחומים</string>
    <string name="filter_checked_des">checked</string>
    <string name="filter_uncheck_des">uncheck</string>
    <string name="filter_img_tag">filter_img_tag</string>
    <string name="slidedown_more">עוד</string>
    <string name="slideup_more">קריסה</string>
    <!-- job details -->
    <string name="location_title">:מיקום</string>
    <string name="experience_title">:שנות ניסיון</string>
    <string name="requirements_title">:דרישות המשרה</string>
    <string name="email_title">שליחת קו"ח אל</string>
    <!-- chat -->
    <string name="send_msg">שידור</string>

</resources>