<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/slidedown_more_items_btn"
        android:layout_width="match_parent"
        android:layout_height="@dimen/login_btn_height"
        android:background="@color/grey_item_bg"
        android:orientation="horizontal" >

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="9"
            android:gravity="center_vertical"
            android:visibility="visible" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:text="@string/slidedown_more"
                android:textSize="@dimen/type_text_size" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:contentDescription="@string/main_bg_img_des"
                android:src="@drawable/more_off" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical|right"
            android:orientation="vertical" >
        </LinearLayout>
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/slideup_more_items_btn"
        android:layout_width="match_parent"
        android:layout_height="@dimen/login_btn_height"
        android:background="@color/red_light"
        android:gravity="center_vertical"
        android:visibility="gone" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/slideup_more"
            android:textColor="@color/white_text"
            android:textSize="@dimen/type_text_size" />
    </RelativeLayout>

</LinearLayout>