<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/expandable_toggle_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/grey_item_bg"
        android:orientation="horizontal" >

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="9"
            android:orientation="horizontal" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/menu_item_title"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/start_end_time"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="5"
                    android:gravity="center"
                    android:textSize="@dimen/type_text_size" />

                <TextView
                    android:id="@+id/meeting_date"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="5"
                    android:gravity="center"
                    android:textSize="@dimen/type_text_size" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="@dimen/menu_item_title"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/expand_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/main_bg_img_des"
                android:src="@drawable/more_off"
                android:tag="@string/expand_icon" />

            <ImageView
                android:id="@+id/expand_icon_hidden"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/main_bg_img_des"
                android:src="@drawable/more_on"
                android:tag="@string/expand_icon_hidden"
                android:visibility="gone" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/expandable"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/light_grew_bg"
        android:orientation="vertical"
        android:paddingLeft="@dimen/main_menu_item_padding"
        android:paddingRight="@dimen/main_menu_item_padding" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white_bg"
            android:orientation="vertical"
            android:paddingLeft="@dimen/login_items_padding"
            android:paddingRight="@dimen/login_items_padding" >

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/main_menu_item_padding"
                android:paddingTop="@dimen/main_menu_item_padding" >

                <TextView
                    android:id="@+id/class_number_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:text="@string/cs_class_num"
                    android:textColor="@color/red_light"
                    android:textSize="@dimen/type_text_size" />

                <TextView
                    android:id="@+id/class_number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toLeftOf="@id/class_number_title"
                    android:paddingRight="@dimen/login_item_padding"
                    android:textSize="@dimen/type_text_size" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/main_menu_item_padding"
                android:paddingTop="@dimen/main_menu_item_padding" >

                <TextView
                    android:id="@+id/teacher_name_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:text="@string/cs_teacher_name"
                    android:textColor="@color/red_light"
                    android:textSize="@dimen/type_text_size" />

                <TextView
                    android:id="@+id/teacher_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toLeftOf="@id/teacher_name_title"
                    android:paddingRight="@dimen/login_item_padding"
                    android:textSize="@dimen/type_text_size" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/main_menu_item_padding"
                android:paddingTop="@dimen/main_menu_item_padding" >

                <TextView
                    android:id="@+id/lesson_topic_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:text="@string/cs_lesson_topic"
                    android:textColor="@color/red_light"
                    android:textSize="@dimen/type_text_size" />

                <TextView
                    android:id="@+id/lesson_topic"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toLeftOf="@id/lesson_topic_title"
                    android:paddingRight="@dimen/login_item_padding"
                    android:textSize="@dimen/type_text_size" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/main_menu_item_padding"
                android:paddingTop="@dimen/main_menu_item_padding" >

                <TextView
                    android:id="@+id/classroom_number_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:text="@string/cs_classroom_num"
                    android:textColor="@color/red_light"
                    android:textSize="@dimen/type_text_size" />

                <TextView
                    android:id="@+id/classroom_number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toLeftOf="@id/classroom_number_title"
                    android:paddingRight="@dimen/login_item_padding"
                    android:textSize="@dimen/type_text_size" />
            </RelativeLayout>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>