<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <ScrollView
        android:id="@+id/sv_change_password"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="9"
        android:background="@color/light_grew_bg"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:paddingLeft="@dimen/login_item_padding"
        android:paddingRight="@dimen/login_item_padding"
        android:scrollbars="none" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/menu_item_title"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:background="@color/deep_grew_bg"
                android:gravity="center_vertical" >

                <TextView
                    style="@style/menu_text"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/recommend_friend_title" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:contentDescription="@string/main_bg_img_des"
                    android:src="@drawable/people" />
            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:orientation="vertical"
                android:paddingLeft="@dimen/login_items_padding"
                android:paddingRight="@dimen/login_items_padding" >

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white_bg"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:padding="@dimen/login_item_padding" >

                    <EditText
                        android:id="@+id/friend_name"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/login_item_height"
                        android:background="@null"
                        android:gravity="center_vertical|right"
                        android:inputType="textPassword"
                        android:padding="@dimen/login_item_padding"
                        android:singleLine="true"
                        android:textSize="@dimen/type_text_size" />

                    <TextView
                        android:id="@+id/friend_name_hint"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:gravity="center_vertical|right"
                        android:padding="@dimen/login_item_padding"
                        android:text="@string/recommend_friend_name_hint"
                        android:textColor="@color/hint_text"
                        android:textSize="@dimen/type_text_size" />
                </RelativeLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:orientation="vertical"
                android:paddingLeft="@dimen/login_items_padding"
                android:paddingRight="@dimen/login_items_padding" >

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white_bg"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:padding="@dimen/login_item_padding" >

                    <EditText
                        android:id="@+id/friend_phone"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/login_item_height"
                        android:background="@null"
                        android:gravity="center_vertical|right"
                        android:inputType="textPassword"
                        android:padding="@dimen/login_item_padding"
                        android:singleLine="true"
                        android:textSize="@dimen/type_text_size" />

                    <TextView
                        android:id="@+id/friend_phone_hint"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:gravity="center_vertical|right"
                        android:padding="@dimen/login_item_padding"
                        android:text="@string/recommend_friend_phone_hint"
                        android:textColor="@color/hint_text"
                        android:textSize="@dimen/type_text_size" />
                </RelativeLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:orientation="vertical"
                android:paddingLeft="@dimen/login_items_padding"
                android:paddingRight="@dimen/login_items_padding" >

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white_bg"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:padding="@dimen/login_item_padding" >

                    <EditText
                        android:id="@+id/friend_email"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/login_item_height"
                        android:background="@null"
                        android:gravity="center_vertical|right"
                        android:inputType="textPassword"
                        android:padding="@dimen/login_item_padding"
                        android:singleLine="true"
                        android:textSize="@dimen/type_text_size" />

                    <TextView
                        android:id="@+id/friend_email_hint"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:gravity="center_vertical|right"
                        android:padding="@dimen/login_item_padding"
                        android:text="@string/recommend_friend_email_hint"
                        android:textColor="@color/hint_text"
                        android:textSize="@dimen/type_text_size" />
                </RelativeLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:orientation="vertical"
                android:paddingLeft="@dimen/login_items_padding"
                android:paddingRight="@dimen/login_items_padding" >

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white_bg"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:padding="@dimen/login_item_padding" >

                    <EditText
                        android:id="@+id/friend_interest"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/login_item_height"
                        android:background="@null"
                        android:gravity="center_vertical|right"
                        android:inputType="textPassword"
                        android:padding="@dimen/login_item_padding"
                        android:singleLine="true"
                        android:textSize="@dimen/type_text_size" />

                    <TextView
                        android:id="@+id/friend_interest_hint"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:gravity="center_vertical|right"
                        android:padding="@dimen/login_item_padding"
                        android:text="@string/recommend_friend_interest_hint"
                        android:textColor="@color/hint_text"
                        android:textSize="@dimen/type_text_size" />
                </RelativeLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:orientation="vertical"
                android:paddingLeft="@dimen/login_items_padding"
                android:paddingRight="@dimen/login_items_padding" >

                <Button
                    android:id="@+id/recommend_friend_btn"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/login_btn_height"
                    android:background="@drawable/common_btn_style"
                    android:gravity="center"
                    android:text="@string/change_pwd_btn"
                    android:textColor="@color/white_text"
                    android:textSize="@dimen/title_text_size" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:orientation="horizontal"
                android:paddingLeft="@dimen/login_items_padding"
                android:paddingRight="@dimen/login_items_padding" >

                <LinearLayout
                    android:id="@+id/choose_contact_type_btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/deep_grew_bg"
                    android:gravity="center_vertical"
                    android:orientation="horizontal" >

                    <Button
                        android:layout_width="0dp"
                        android:layout_height="@dimen/login_btn_height"
                        android:layout_weight="8"
                        android:background="@drawable/choose_contact_btn_style"
                        android:gravity="center"
                        android:text="@string/recommend_contacts_type"
                        android:textColor="@color/white_text"
                        android:textSize="@dimen/contacts_text_size" />

                    <ImageView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:contentDescription="@string/main_bg_img_des"
                        android:src="@drawable/contacts" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" >

                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/login_item_height"
                        android:background="@drawable/contacts_items_border"
                        android:text="@string/recommend_local_contact" />

                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/login_item_height"
                        android:background="@drawable/contacts_items_border"
                        android:text="@string/recommend_google_contact" />

                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/login_item_height"
                        android:background="@color/white_bg"
                        android:text="@string/recommend_outlook_contact" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>